Back-end/src/main/java/com/example/error/TaskIsNotActiveException.java
package com.example.error;

public class TaskIsNotActiveException extends RuntimeException {

    public TaskIsNotActiveException(String message) {
        super(message);
    }

}
